--- a/InitializrSpringbootProject/Dockerfile
+++ b/InitializrSpringbootProject/Dockerfile
@@ -1,4 +1,4 @@
 FROM amazoncorretto:17
 MAINTAINER yanet
-COPY target/yt-0.0.1-SNAPSHOT yt-0.0.1-SNAPSHOT
-ENTRYPOINT ["java","-jar","/yt-0.0.1-SNAPSHOT"]
+COPY target/yt-0.0.1-SNAPSHOT.jar yt-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","/yt-0.0.1-SNAPSHOT.jar"]
