--- a/InitializrSpringbootProject/Dockerfile
+++ b/InitializrSpringbootProject/Dockerfile
@@ -1,4 +1,4 @@
 FROM amazoncorretto:17
 MAINTAINER yanet
-COPY ./target/yt-0.0.1-SNAPSHOT.jar yan-app.jar
+COPY target/yt-0.0.1-SNAPSHOT.jar yan-app.jar
 ENTRYPOINT ["java","-jar","/yan-app.jar"]
